# agentic-cli

./: .env.example  .gitignore  README.md  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yml
src/: __main__.py
src/agent/: Agent.py
src/agent/schema/: Agent.py
src/api/: api.py
src/api/schema/: ChatBody.py
src/compaction/: Compaction.py  CompactionRunner.py  CompactionStrategy.py
src/compaction/strategies/: SlidingWindow.py  Summarization.py
src/config/: AppConfig.py  CompactionConfig.py  LLMConfig.py  MCPConfig.py  MemoryConfig.py  ToolsConfig.py  UIConfig.py
src/llm/: utils.py
src/llm/interfaces/: BaseLLMProvider.py  StreamLLMChatResponse.py
src/llm/providers/: OllamaProvider.py  __init__.py
src/llm/schema/: ChatConnectionError.py  ChatResponseError.py  ChatTimeoutError.py  LLMChatResponse.py  Message.py  ToolCall.py
src/mcp/: client.py  mcp_config.py  mpc_registry.py
src/mcp_integration/: client.py  mcp.json  mcp_registry.py  utils.py
src/memory/: Session.py  preamble.py  summarize.py  update_session.py  utils.py
src/memory/data/: session_index.json
src/memory/interface/: MemoryManager.py  Session.py  SessionIndex.py
src/shared/: config.py  console.py  main.py  utils.py
src/tools/: ToolRunner.py  registry.py
src/tools/interfaces/: Tool.py
src/tools/registry/: __init__.py  bash.py  registry_core.py  weather.py
src/tools/tools/: bash.py  (+7 more)
tests/: conftest.py  test_agent.py  test_compaction.py  test_memory.py  test_ollama_provider.py  test_openrouter_provider.py
(+6 files in other folders)
