[project]
name = "ai-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tavily>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.42",
]
